# gweb

./: .hlint.yaml  CHANGELOG.md  Makefile  README.md  cabal.project  gweb.cabal
.github/workflows/: haskell.yml
app/: Main.hs
example/: .ghci  .gitignore  build.cfg  index.css
example/templates/: default.template
src/App/: Abutting.hs  Annotate.hs  Config.hs  Diagram.hs  FixN.hs  Graph.hs  Options.hs  Parse.hs  Render.hs  Tangle.hs  Types.hs
src/App/Annotate/: Headers.hs
test/: Main.hs  Tests.hs
test-golden/00_standard/: 03_empty-root.parsed  05_nonempty-root.parsed  06_chain.parsed  07_link.parsed  08_unlinked-block.parsed  09_block-attributes.parsed  10_two-roots.parsed  11_angles.parsed  12_doc-structure.html-dev  12_doc-structure.html-user  12_doc-structure.md  12_doc-structure.pandoc-dev  12_doc-structure.pandoc-user  12_doc-structure.parsed
test-golden/01_diagrams/: 01_graphviz_1.html-user  01_graphviz_1.pandoc-user  02_gnuplot_1.pandoc-user  05_graphviz_err.html-user  05_graphviz_err.md  05_graphviz_err.pandoc-user  05_graphviz_err.parsed  06_gnuplot_err.html-dev  06_gnuplot_err.md  06_gnuplot_err.pandoc-user  06_gnuplot_err.parsed
test/App/Abutting/: Test.hs
test/Golden/: Test.hs
